Increase plot fontsize

--- a/Plotting_scripts/Icarus_paper_plots.ipynb
+++ b/Plotting_scripts/Icarus_paper_plots.ipynb
@@ -9,7 +9,7 @@
     "\n",
     "\n",
     "### Example run\n",
-    "These plots are for runs which are comparable to Case 1 of instantaneous accretion in [Dodds et. al. 2021](https://agupubs.onlinelibrary.wiley.com/doi/full/10.1029/2020JE006704). r=500km, $t_{acc}$=0.8 Ma after CAI formation, $X_{S,0}$=[27.1,30.05,33] wt%, all other parameters are median values from Sanderson et. al. 2024 (EPSL. in review). For runs 1-6, odd number runs have $m_{frac}=0$ and even number runs have $m_{frac}=1$. Run 7 is same the parameters as run 4, but the additional buoyancy source from solidification has been removed. In run 7, solidification only decreases convective lengthscale mimicing the scenario of a stratified core solidifying inwards.\n",
+    "These plots are for runs which are comparable to Case 1 of instantaneous accretion in [Dodds et. al. 2021](https://agupubs.onlinelibrary.wiley.com/doi/full/10.1029/2020JE006704). r=500km, $t_{acc}$=0.8 Ma after CAI formation, $X_{S,0}$=[27.1,30.05,33] wt%, all other parameters are median values from Sanderson et. al. 2024 (EPSL. in review). For runs 1-6, odd number runs have $m_{frac}=0$ and even number runs have $m_{frac}=1$. Run 7 is for a 400km planetesimal accreted at 0.5Ma after CAI formation for comparison with the single accretion event model in [Bryson et. al. 2019](https://doi.org/10.1016/j.epsl.2019.05.046)\n",
     "\n",
     "+ [Summary stats](#stats)\n",
     "+ [Temperature profile](#temp)\n",
@@ -70,7 +70,7 @@
     "save = True# do you want to save your figures?\n",
     "automated = True\n",
     "log_time = True #do you want to plot time logarithmically\n",
-    "path = '../Results_combined/Dodds_comp/' #path to files\n",
+    "path = '../Results_combined/Dodds_comp/' #path to files \n",
     "save_path = '../Plots/Icarus_paper/'"
    ]
   },
@@ -413,7 +413,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plt.figure(rasterized=True,figsize=[15,10])\n",
+    "plt.figure(figsize=[10,20/3])\n",
     "plt.pcolormesh(tpa[::2],rplot[::2],Tall[::2,::2],shading = 'gouraud',vmin=200,vmax=1600)\n",
     "plt.hlines(rc/1e3,tpt[0],max(tpa),linestyle='--',color='black',label='CMB')\n",
     "plt.vlines(tpt[0],0,r/1e3,linestyle='-.',label='Differentiation')\n",
@@ -434,10 +434,10 @@
     "plt.xlabel('Time / Ma')\n",
     "plt.colorbar(label='Temperature/K')\n",
     "plt.ylim(bottom=0)\n",
-    "plt.legend(bbox_to_anchor=[1.4,0.5])\n",
+    "plt.legend(bbox_to_anchor=[1.6,0.5])\n",
     "plt.xscale('log')\n",
     "if save == True:\n",
-    "    plt.savefig(f'{save_path}run_{run}_thermal_profile.pdf',bbox_inches='tight',dpi=500)"
+    "    plt.savefig(f'{save_path}run_{run}_thermal_profile.png',bbox_inches='tight',dpi=500)"
    ]
   },
   {
@@ -533,50 +533,62 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "4ef805bb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import seaborn as sns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "29c1b2fc",
    "metadata": {},
    "outputs": [],
    "source": [
     "dl_end = int(dl[Tm_conv==0][0]/dr) #index of CMB b.l. base above CMB at cessation of convection\n",
-    "plt.figure(tight_layout=True,figsize=[10,7])\n",
-    "xmin=tstart\n",
     "\n",
-    "#temperatures as function of time\n",
-    "plt.subplot(2,1,1)\n",
+    "with sns.plotting_context('paper',font_scale=1.4):\n",
+    "    plt.figure(tight_layout=True,figsize=[10,7])\n",
+    "    xmin=tstart\n",
     "\n",
-    "plt.plot(t_plot_t,Tc,label='central core temperature',color='black')\n",
-    "plt.plot(t_plot_t[Tm_conv!=0],Tm_conv[Tm_conv!=0],label='convective mantle temperature',color='#FF5350')\n",
-    "plt.plot(t_plot_t[Tm_conv==0],T_profile[Tm_conv==0,nmantle+dl_end+2],label='conductive mantle temperature',color='#FF5350',linestyle='dashed')\n",
-    "if log_time == True:\n",
-    "    plt.xscale('log')\n",
-    "plt.ylim([1250,1550])\n",
-    "plt.ylabel('T/K')\n",
-    "plt.legend(loc='lower left')\n",
+    "    #temperatures as function of time\n",
+    "    plt.subplot(2,1,1)\n",
     "\n",
-    "#fluxes as function of time\n",
-    "plt.subplot(2,1,2)\n",
-    "Fcmb_neg = Fcmb[Fcmb<0]\n",
-    "Fcmb_pos = Fcmb[Fcmb>0]\n",
+    "    plt.plot(t_plot_t,Tc,label='central core temperature',color='black')\n",
+    "    plt.plot(t_plot_t[Tm_conv!=0],Tm_conv[Tm_conv!=0],label='convective mantle temperature',color='#FF5350')\n",
+    "    plt.plot(t_plot_t[Tm_conv==0],T_profile[Tm_conv==0,nmantle+dl_end+2],label='conductive mantle temperature',color='#FF5350',linestyle='dashed')\n",
+    "    if log_time == True:\n",
+    "        plt.xscale('log')\n",
+    "    plt.ylim([1250,1550])\n",
+    "    plt.ylabel('T/K')\n",
+    "    plt.legend(loc='lower left')\n",
     "\n",
-    "plt.semilogy(t_plot_t,Fs,label='$F_s$',color='#0F4C5C')\n",
-    "plt.scatter(t_plot_t[Fcmb<0],abs(Fcmb_neg),label='$-F_{CMB}$',color='#5BC0EB',s=2)\n",
-    "plt.scatter(t_plot_t[Fcmb>0],Fcmb_pos,label='$F_{CMB}$',color='#5F0F40',s=2)\n",
-    "plt.semilogy(t_plot_t,Fad,label='$F_{ad}$',color='#E36414',linestyle='dashed')\n",
-    "plt.semilogy(t_plot_t,Frad,label='$F_{rad}$',color='#9A031E',linestyle='-.')\n",
-    "plt.fill_betweenx(y=[1e-4,100],x1=tstrat_remove,x2=terode,label='erosion of stratification',alpha=0.2)\n",
-    "plt.fill_betweenx(y=[1e-4,100],x1=fcond_t,x2=max(t_plot_t),label='mantle conducting',alpha=0.2)\n",
-    "plt.fill_betweenx(y=[1e-4,1e-3],x1=on1,x2=off1,label='dynamo on',alpha=0.2,color='grey')\n",
-    "plt.fill_betweenx(y=[1e-4,1e-3],x1=on2,x2=off2,alpha=0.2,color='grey')\n",
-    "if log_time == True:\n",
-    "    plt.xscale('log')\n",
-    "plt.xlabel('Time/ Ma')\n",
+    "    #fluxes as function of time\n",
+    "    plt.subplot(2,1,2)\n",
+    "    Fcmb_neg = Fcmb[Fcmb<0]\n",
+    "    Fcmb_pos = Fcmb[Fcmb>0]\n",
     "\n",
-    "plt.ylim([1e-4,1e2])   #use these limits when comparing runs\n",
-    "plt.ylabel('Heat flux/ W$m^{-2}$')\n",
-    "plt.legend(loc='upper right',ncol=2)\n",
+    "    plt.semilogy(t_plot_t,Fs,label='$F_s$',color='#0F4C5C')\n",
+    "    plt.scatter(t_plot_t[Fcmb<0],abs(Fcmb_neg),label='$-F_{CMB}$',color='#5BC0EB',s=2)\n",
+    "    plt.scatter(t_plot_t[Fcmb>0],Fcmb_pos,label='$F_{CMB}$',color='#5F0F40',s=2)\n",
+    "    plt.semilogy(t_plot_t,Fad,label='$F_{ad}$',color='#E36414',linestyle='dashed')\n",
+    "    plt.semilogy(t_plot_t,Frad,label='$F_{rad}$',color='#9A031E',linestyle='-.')\n",
+    "    plt.fill_betweenx(y=[1e-4,100],x1=tstrat_remove,x2=terode,label='erosion of stratification',alpha=0.2)\n",
+    "    plt.fill_betweenx(y=[1e-4,100],x1=fcond_t,x2=max(t_plot_t),label='mantle conducting',alpha=0.2)\n",
+    "    plt.fill_betweenx(y=[1e-4,1e-3],x1=on1,x2=off1,label='dynamo on',alpha=0.2,color='grey')\n",
+    "    plt.fill_betweenx(y=[1e-4,1e-3],x1=on2,x2=off2,alpha=0.2,color='grey')\n",
+    "    if log_time == True:\n",
+    "        plt.xscale('log')\n",
+    "    plt.xlabel('Time/ Ma')\n",
     "\n",
-    "if save == True:\n",
-    "    plt.savefig(f'{save_path}run_{run}_flux.png',dpi=500)"
+    "    plt.ylim([1e-4,1e2])   #use these limits when comparing runs\n",
+    "    plt.ylabel('Heat flux/ W$m^{-2}$')\n",
+    "    plt.legend(loc='upper right',ncol=2)\n",
+    "\n",
+    "    if save == True:\n",
+    "        plt.savefig(f'{save_path}run_{run}_flux.png',dpi=500)"
    ]
   },
   {
@@ -895,7 +907,7 @@
    "outputs": [],
    "source": [
     "wn = 200 #averaging window width\n",
-    "fig, ax = plt.subplots(nrows=2,ncols=1,sharex='col',figsize=[5,6])\n",
+    "fig, ax = plt.subplots(nrows=1,ncols=2,sharex='col',figsize=[10,3])\n",
     "#B and Rem\n",
     "t_plot_solid = t_plot_t[f<f0]\n",
     "t_plot_solid2 = t_plot_t2[f2<f0]\n",
@@ -918,7 +930,7 @@
     "ax[1].hlines(10,min(t_plot_t[f<f0]),max(t_plot_t),linestyle='dashed',color='grey')\n",
     "ax[0].legend(ln1+ln2,[f'$m_{{frac}}$={icfrac:.0g}',f'$m_{{frac}}$={icfrac2:.0g}'])\n",
     "#ax[1].legend(ln3+ln4,[f'$m_{{frac}}$={icfrac:.0g}',f'$m_{{frac}}$={icfrac2:.0g}'])\n",
-    "ax[0].set_ylabel('Magnetic field \\n strength/ $\\mu T$')\n",
+    "ax[0].set(ylabel='Magnetic field \\n strength/ $\\mu T$',xlabel='Time /Ma',xlim=[350,575])\n",
     "ax[1].set(xlabel='Time /Ma',ylabel='$Re_m$',xlim=[350,575])\n",
     "if save == True:\n",
     "    plt.savefig(f'{save_path}Bendmember.png',dpi=500)"
@@ -1224,7 +1236,7 @@
     "c2= '#DAC800'\n",
     "c1 = '#CA7800' #highest S content\n",
     "c3='#4F4F4F' #lowest S content\n",
-    "fig, ax = plt.subplots(nrows=2,ncols=1,sharex='col',figsize=[10,6])\n",
+    "fig, ax = plt.subplots(nrows=2,ncols=1,figsize=[10,6],sharex='col')\n",
     "#scale solidification time\n",
     "t_plot_solid = t_plot_t[f<f0]\n",
     "t_plot_solid3 = t_plot_t3[f3<f0]\n",
@@ -1260,6 +1272,7 @@
     "ax[1].hlines(10,min(t_plot_t),max(t_plot_t),linestyle='dashed',color='grey')\n",
     "ax[0].legend(ln0+ln1+ln2,[f'X$_{{s,0}}$={Xs3[0]:.1f} wt%',f'X$_{{s,0}}$={Xs[0]:.1f} wt%','Eutectic $X_{S,0}$'],loc='lower left')\n",
     "ax[0].set(ylabel='Magnetic field \\n strength/ $\\mu T$',ylim=[0,20])\n",
+    "ax[0].set(xlabel='Time /Ma')\n",
     "ax[1].set(xlabel='Time /Ma',ylabel='$Re_m$',xscale='log',ylim=[0,150])\n",
     "if save == True:\n",
     "    plt.savefig(f'{save_path}Bnobuoy.pdf',dpi=500)"
