Add colourmap to delta_l plot

--- a/Plotting_scripts/Icarus_paper_plots.ipynb
+++ b/Plotting_scripts/Icarus_paper_plots.ipynb
@@ -41,6 +41,7 @@
     "import numpy as np\n",
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
+    "import matplotlib as mpl\n",
     "import sys\n",
     "sys.path.append('../')\n",
     "from load_info import load_run_info, load_run_results\n",
@@ -770,21 +771,46 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "67d7a818",
+   "metadata": {},
+   "source": [
+    "Find the index of the time series that corresponds to the xlim on the time axis to speed up plotting"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d4239f82",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "xlim_up = 40 #40 Ma\n",
+    "tind = np.where(t_plot_t<xlim_up)[-1][-1]"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "000025c2",
    "metadata": {},
    "outputs": [],
    "source": [
+    "ticks = np.arange(1500,1530,10)\n",
+    "labels = (ticks-1400)/400 #melt fraction\n",
     "fig, ax = plt.subplots(1,1)\n",
     "ax1 = ax.twinx()\n",
-    "ln1 = ax.plot(t_plot_t,Tcmb-Tm_conv,color='black')\n",
-    "ln2 = ax1.plot(t_plot_t,dl/1e3,color='darkorchid',linestyle='dashed')\n",
-    "ax.set(ylim=[0,10],xscale='log',xlim=[0.8,40],xlabel='Time/Ma',ylabel='$T_{CMB}-T_{m,conv}$/K')\n",
-    "ax1.set(ylabel='$\\delta_l$/km',ylim=[0,5])\n",
-    "ax1.tick_params(axis='y',colors='darkorchid') \n",
-    "ax1.yaxis.label.set_color('darkorchid') \n",
-    "ax.legend(ln1+ln2,['$T_{CMB}-T_{m,conv}$','$\\delta_l$'])\n",
+    "ln2 = ax.plot(t_plot_t,dl/1e3,color='darkorchid',linestyle='dashed')\n",
+    "mappable = ax.pcolormesh(t_plot_t[:tind],rplot[:11],np.transpose(T_profile[:(tind-1),(nmantle+1):(nmantle+11)]),vmin=1500,vmax=1520)\n",
+    "ln1 = ax1.plot(t_plot_t,Tcmb-Tm_conv,color='black')\n",
+    "ax1.set(ylim=[0,10],xscale='log',xlim=[diff_time,xlim_up],xlabel='Time/Ma',ylabel='$T_{CMB}-T_{m,conv}$/K')\n",
+    "ax.set(ylabel='$\\delta_l$/km',ylim=[0,5])\n",
+    "ax.tick_params(axis='y',colors='darkorchid') \n",
+    "ax.yaxis.label.set_color('darkorchid') \n",
+    "ax1.legend(ln1+ln2,['$T_{CMB}-T_{m,conv}$','$\\delta_l$'])\n",
+    "cax = fig.add_axes([1,0.15,0.025,0.7])\n",
+    "col = fig.colorbar(mappable,cax=cax,orientation='vertical',label='Melt fraction')\n",
+    "col.set_ticks(ticks, labels=labels)\n",
     "if save == True:\n",
     "    plt.savefig(f'{save_path}run_{run}_deltal.png',dpi=500)"
    ]
@@ -814,9 +840,7 @@
    "source": [
     "fig, ax = plt.subplots(1,1)\n",
     "ln1 = ax.plot(t_plot_t,Tcmb-T_profile[:,nmantle+1],color='black')\n",
-    "ax.set(ylim=[0,3],xlim=[on2,tsolid_start],xlabel='Time/Ma',ylabel='$T_{CMB}-T_{m,CMB+1}$ /K')\n",
-    "if save == True:\n",
-    "    plt.savefig(f'{save_path}run_{run}_deltal.png',dpi=500)"
+    "ax.set(ylim=[0,3],xlim=[on2,tsolid_start],xlabel='Time/Ma',ylabel='$T_{CMB}-T_{m,CMB+1}$ /K')"
    ]
   },
   {
@@ -933,7 +957,7 @@
     "ax[0].set(ylabel='Magnetic field \\n strength/ $\\mu T$',xlabel='Time /Ma',xlim=[350,575])\n",
     "ax[1].set(xlabel='Time /Ma',ylabel='$Re_m$',xlim=[350,575])\n",
     "if save == True:\n",
-    "    plt.savefig(f'{save_path}Bendmember.png',dpi=500)"
+    "    plt.savefig(f'{save_path}Bendmember.png',dpi=500,bbox_inches='tight')"
    ]
   },
   {
