Don't truncate figure on saving

--- a/Plotting_scripts/Icarus_paper_plots.ipynb
+++ b/Plotting_scripts/Icarus_paper_plots.ipynb
@@ -804,7 +804,7 @@
     "mappable = ax.pcolormesh(t_plot_t[:tind],rplot[:11],np.transpose(T_profile[:(tind-1),(nmantle+1):(nmantle+11)]),vmin=1500,vmax=1520)\n",
     "ln1 = ax1.plot(t_plot_t,Tcmb-Tm_conv,color='black')\n",
     "ax1.set(ylim=[0,10],xscale='log',xlim=[diff_time,xlim_up],xlabel='Time/Ma',ylabel='$T_{CMB}-T_{m,conv}$/K')\n",
-    "ax.set(ylabel='$\\delta_l$/km',ylim=[0,5])\n",
+    "ax.set(ylabel='Distance from CMB /km',ylim=[0,5],xlabel='Time/Ma')\n",
     "ax.tick_params(axis='y',colors='darkorchid') \n",
     "ax.yaxis.label.set_color('darkorchid') \n",
     "ax1.legend(ln1+ln2,['$T_{CMB}-T_{m,conv}$','$\\delta_l$'])\n",
@@ -812,7 +812,7 @@
     "col = fig.colorbar(mappable,cax=cax,orientation='vertical',label='Melt fraction')\n",
     "col.set_ticks(ticks, labels=labels)\n",
     "if save == True:\n",
-    "    plt.savefig(f'{save_path}run_{run}_deltal.png',dpi=500)"
+    "    plt.savefig(f'{save_path}run_{run}_deltal.png',dpi=500,bbox_inches='tight')"
    ]
   },
   {
