Commiting before merge

--- a/Plotting_scripts/plot_combined.ipynb
+++ b/Plotting_scripts/plot_combined.ipynb
@@ -69,11 +69,11 @@
    "outputs": [],
    "source": [
     "run=3\n",
-    "save = True# do you want to save your figures?\n",
-    "automated = True #if this run was one of an automated group\n",
-    "#path = '../Results_combined/' #path to files\n",
+    "save = False# do you want to save your figures?\n",
+    "automated = True#if this run was one of an automated group\n",
+    "#path = '../Results_combined/Paper_timestep_test/' #path to files\n",
     "path = '../Results_combined/Paper_run300km/params_1/' #path to files\n",
-    "save_path = '../Plots/Icarus_paper'\n",
+    "save_path = '../Plots/Icarus_paper/'\n",
     "#save_path = '../Plots/Paper_run4/'"
    ]
   },
@@ -164,14 +164,14 @@
    "outputs": [],
    "source": [
     "if automated == True:\n",
-    "    r, dr, tstart, dt, viscosity = load_run_info(run,f'{path}auto_params.csv')\n",
+    "    r, dr, tstart, dt, viscosity, icfrac = load_run_info(run,f'{path}auto_params.csv')\n",
     "else: \n",
-    "    r, dr, tstart, dt, viscosity = load_run_info(run,f'{path}run_info.csv')"
+    "    r, dr, tstart, dt, viscosity, icfrac = load_run_info(run,f'{path}run_info.csv')"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "327e3a63",
+   "id": "f188e299",
    "metadata": {},
    "source": [
     "Calculate silicate melt content for thermal evolution"
@@ -180,7 +180,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "512773a6",
+   "id": "4588b8ae",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -410,11 +410,12 @@
     "    plt.plot(t_plot_t,(rc+dl)/1e3,linestyle='dotted',label='top of $\\delta_l$',color='blue')\n",
     "plt.plot(t_plot_t[f<f0],f[f<f0]*rc/1e3,linestyle='-.',color='black',label='Top of liquid core')\n",
     "#labels and limits\n",
-    "plt.ylabel('r /km')\n",
-    "plt.xlabel('t / Myr')\n",
-    "plt.colorbar(label='T/K')\n",
-    "plt.title(f\"Run {run}\")\n",
-    "#plt.xscale('log')\n",
+    "plt.ylabel('Distance from centre of asteroid/km')\n",
+    "plt.xlabel('Time / Ma')\n",
+    "plt.colorbar(label='Temperature/K')\n",
+    "#plt.title(f\"Run {run}\")\n",
+    "plt.xscale('log')\n",
+    "plt.ylim(bottom=0)\n",
     "plt.legend(bbox_to_anchor=[1.4,0.5])\n",
     "if save == True:\n",
     "    plt.savefig(f'{save_path}thermal_profile_{run}.png',bbox_inches='tight')"
@@ -874,22 +875,20 @@
     "plt.subplot(2,1,1)\n",
     "\n",
     "plt.plot(t_plot_t,Tc,label='central T$_c$')\n",
-    "plt.plot(t_plot_t[Tc_conv!=0],Tc_conv[Tc_conv!=0],label='convective T$_c$')\n",
     "plt.plot(t_plot_t,Tcmb,label='T$_{cmb}$')\n",
     "plt.plot(t_plot_t,Tm_mid,label='T$_m$ - middle')\n",
-    "plt.plot(t_plot_t[Tm_conv!=0],Tm_conv[Tm_conv!=0],label='convective T$_m$')\n",
+    "#plt.plot(t_plot_t[Tm_conv!=0],Tm_conv[Tm_conv!=0],label='convective T$_m$')\n",
     "#plt.scatter(t_plot_t,T_profile[:,-400],label='T one above CMB')\n",
     "#plt.scatter(t_plot_t,T_profile[:,-399],label='T two above CMB')\n",
     "\n",
     "if log_time == True:\n",
     "    plt.xscale('log')\n",
     "#if conduction == True:\n",
-    "plt.vlines(fcond_t,ymin=min(Tm_surf),ymax=1600,color='black',linestyle='--',label='conduction')\n",
-    "plt.ylim([1400,1600]) #use these limits when comparing runs\n",
+    "#plt.vlines(fcond_t,ymin=min(Tm_surf),ymax=1600,color='black',linestyle='--',label='conduction')\n",
+    "#plt.ylim([1530,1550]) #use these limits when comparing runs\n",
     "#plt.ylim([1520,1530])\n",
     "plt.ylabel('T/K')\n",
-    "#plt.legend(loc='lower left', ncol= 2)\n",
-    "plt.legend(loc='lower right', ncol= 2)\n",
+    "plt.legend(loc='lower left', ncol= 2)\n",
     "#fluxes as function of time\n",
     "plt.subplot(2,1,2)\n",
     "\n",
@@ -901,17 +900,60 @@
     "plt.scatter(t_plot_t[Fcmb>0],Fcmb_pos,label='$F_{CMB}$',color='mediumorchid',s=2)\n",
     "plt.semilogy(t_plot_t,Fad,label='$F_{ad}$')\n",
     "plt.semilogy(t_plot_t,Frad,label='$F_{rad}$')\n",
-    "plt.fill_betweenx(y=[1e-4,0.1],x1=tstrat_remove,x2=terode,label='erosion of stratification',alpha=0.2)\n",
+    "plt.fill_betweenx(y=[1e-4,100],x1=tstrat_remove,x2=terode,label='erosion of stratification',alpha=0.2)\n",
+    "plt.fill_betweenx(y=[1e-4,100],x1=fcond_t,x2=max(t_plot_t),label='mantle conducting',alpha=0.2)\n",
+    "plt.fill_betweenx(y=[1e-4,1e-3],x1=on1,x2=off1,label='dynamo on',alpha=0.2,color='grey')\n",
+    "plt.fill_betweenx(y=[1e-4,1e-3],x1=on2,x2=off2,alpha=0.2,color='grey')\n",
     "if log_time == True:\n",
     "    plt.xscale('log')\n",
-    "plt.xlabel('Time/ Myr')\n",
+    "plt.xlabel('Time/ Ma')\n",
     "\n",
     "plt.ylim([1e-4,1e2])   #use these limits when comparing runs\n",
-    "plt.ylabel('Flux/ W$m^{-2}$')\n",
+    "plt.ylabel('Heat flux/ W$m^{-2}$')\n",
+    "plt.legend(loc='upper right',ncol=2)\n",
+    "\n",
+    "#if save == True:\n",
+    "    #plt.savefig(f'{save_path}run_{run}_Tflux.png',dpi=450)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1932b30a",
+   "metadata": {},
+   "source": [
+    "Just fluxes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "be3b5761",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.figure(tight_layout=True,figsize=[10,3.5])\n",
+    "Fcmb_neg = Fcmb[Fcmb<0]\n",
+    "Fcmb_pos = Fcmb[Fcmb>0]\n",
+    "\n",
+    "plt.semilogy(t_plot_t,Fs,label='$F_s$',color='#0F4C5C')\n",
+    "plt.scatter(t_plot_t[Fcmb<0],abs(Fcmb_neg),label='$-F_{CMB}$',color='#5BC0EB',s=2)\n",
+    "plt.scatter(t_plot_t[Fcmb>0],Fcmb_pos,label='$F_{CMB}$',color='#5F0F40',s=2)\n",
+    "plt.semilogy(t_plot_t,Fad,label='$F_{ad}$',color='#E36414',linestyle='dashed')\n",
+    "plt.semilogy(t_plot_t,Frad,label='$F_{rad}$',color='#9A031E',linestyle='dotted')\n",
+    "plt.fill_betweenx(y=[1e-4,100],x1=tstrat_remove,x2=terode,label='erosion of stratification',alpha=0.2)\n",
+    "plt.fill_betweenx(y=[1e-4,100],x1=fcond_t,x2=max(t_plot_t),label='mantle conducting',alpha=0.2)\n",
+    "plt.fill_betweenx(y=[1e-4,1e-3],x1=on1,x2=off1,label='dynamo on',alpha=0.2,color='grey')\n",
+    "plt.fill_betweenx(y=[1e-4,1e-3],x1=on2,x2=off2,alpha=0.2,color='grey')\n",
+    "if log_time == True:\n",
+    "    plt.xscale('log')\n",
+    "plt.xlabel('Time/ Ma')\n",
+    "\n",
+    "plt.ylim([1e-4,1e2])   #use these limits when comparing runs\n",
+    "plt.ylabel('Heat flux/ W$m^{-2}$')\n",
     "plt.legend(loc='upper right',ncol=2)\n",
     "\n",
     "if save == True:\n",
-    "    plt.savefig(f'{save_path}run_{run}_Tflux.png',dpi=450)\n"
+    "    plt.savefig(f'{save_path}run_{run}_flux.png',dpi=450)\n"
    ]
   },
   {
@@ -1038,7 +1080,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "save = True"
+    "save = False"
    ]
   },
   {
@@ -1114,6 +1156,25 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "6f7c3fdc",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from Rem_calc import r1, r2"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9fe45aec",
+   "metadata": {},
+   "source": [
+    "#### Visualisation of portion of core available for convection\n",
+    "Plot for different fractions of mass in the inner core"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "7fa684f5",
    "metadata": {},
    "outputs": [],
@@ -1123,9 +1184,12 @@
     "\n",
     "plt.subplot(2,1,1)\n",
     "plt.plot(t_plot_t,f,label='f')\n",
+    "plt.plot(t_plot_t,r1(icfrac,f)/rc,label='r1/rc')\n",
+    "plt.plot(t_plot_t,r2(icfrac,f)/rc,label='r2/rc')\n",
     "plt.xscale('log')\n",
     "plt.xlabel('Time/ Myr')\n",
     "plt.ylabel('f')\n",
+    "plt.legend()\n",
     "\n",
     "plt.subplot(2,1,2)\n",
     "plt.plot(t_plot_t,Xs,label='Xs')\n",
