Make rc/r variable

--- a/Plotting_scripts/Icarus_paper_plots.ipynb
+++ b/Plotting_scripts/Icarus_paper_plots.ipynb
@@ -9,7 +9,7 @@
     "\n",
     "\n",
     "### Example run\n",
-    "These plots are for runs which are comparable to Case 1 of instantaneous accretion in [Dodds et. al. 2021](https://agupubs.onlinelibrary.wiley.com/doi/full/10.1029/2020JE006704). r=500km, $t_{acc}$=0.8 Ma after CAI formation, $X_{S,0}$=[27.1,30.05,33] wt%, all other parameters are median values from Sanderson et. al. 2024 (EPSL. in review). For runs 1-6, odd number runs have $m_{frac}=0$ and even number runs have $m_{frac}=1$. Run 7 is for a 400km planetesimal accreted at 0.5Ma after CAI formation for comparison with the single accretion event model in [Bryson et. al. 2019](https://doi.org/10.1016/j.epsl.2019.05.046)\n",
+    "These plots are for runs which are comparable to Case 1 of instantaneous accretion in [Dodds et. al. 2021](https://agupubs.onlinelibrary.wiley.com/doi/full/10.1029/2020JE006704). r=500km, $t_{acc}$=0.8 Ma after CAI formation, $X_{S,0}$=[27.1,30.05,33] wt%, all other parameters are median values from Sanderson et. al. 2024 (EPSL. in review). For runs 1-6, odd number runs have $m_{frac}=0$ and even number runs have $m_{frac}=1$. Run 7 is for a 400km planetesimal accreted at 0.5Ma after CAI formation for comparison with the single accretion event model in [Bryson et. al. 2019](https://doi.org/10.1016/j.epsl.2019.05.046) and run 8 is the same as run 4 but with the GPE term included in core solidification.\n",
     "\n",
     "+ [Summary stats](#stats)\n",
     "+ [Temperature profile](#temp)\n",
@@ -67,12 +67,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "run=4\n",
+    "run=5\n",
     "save = True# do you want to save your figures?\n",
-    "automated = True\n",
+    "automated = False\n",
     "log_time = True #do you want to plot time logarithmically\n",
-    "path = '../Results_combined/Dodds_comp/' #path to files \n",
-    "save_path = '../Plots/Icarus_paper/'"
+    "path = '../Results_combined/Psyche/' #path to files \n",
+    "save_path = '../Plots/Psyche/'"
    ]
   },
   {
@@ -204,9 +204,9 @@
    "outputs": [],
    "source": [
     "if automated == True:\n",
-    "    r, dr, tstart, dt, viscosity, icfrac = load_run_info(run,f'{path}auto_params.csv')\n",
+    "    r, rcr, dr, tstart, dt, viscosity, icfrac = load_run_info(run,f'{path}auto_params.csv')\n",
     "else: \n",
-    "    r, dr, tstart, dt, viscosity, icfrac = load_run_info(run,f'{path}run_info.csv')"
+    "    r, rcr, dr, tstart, dt, viscosity, icfrac = load_run_info(run,f'{path}run_info.csv')"
    ]
   },
   {
@@ -274,7 +274,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "nmantle = int((r/dr)/2)\n",
+    "n_cells = int(r/dr)\n",
+    "nmantle = round((n_cells-3)*(r-rc)/r)+2\n",
     "terode = results.at[0,'terode']\n",
     "tstrat_remove = results.at[0,'tstrat_remove']\n",
     "diff_time = results.at[0,'diff_time']\n",
@@ -374,7 +375,7 @@
     "r_unstable=np.array([]) \n",
     "for ind in min_unstable:\n",
     "    r_unstable = np.append(r_unstable,rplot[int(ind)])\n",
-    "rc = r/2\n",
+    "rc = rcr*r\n",
     "\n",
     "#log time\n",
     "if log_time == True:\n",
@@ -415,7 +416,7 @@
    "outputs": [],
    "source": [
     "plt.figure(figsize=[10,20/3])\n",
-    "plt.pcolormesh(tpa[::2],rplot[::2],Tall[::2,::2],shading = 'gouraud',vmin=200,vmax=1600)\n",
+    "plt.pcolormesh(tpa[::2],rplot[::2],Tall[::2,::2],shading = 'gouraud',vmin=200,vmax=1600) #1033 for kamacite\n",
     "plt.hlines(rc/1e3,tpt[0],max(tpa),linestyle='--',color='black',label='CMB')\n",
     "plt.vlines(tpt[0],0,r/1e3,linestyle='-.',label='Differentiation')\n",
     "plt.fill_betweenx([0,rc/5e3],on1l,off1l,alpha=0,hatch='/',label='dynamo on')\n",
@@ -705,7 +706,7 @@
     "ax[1].set(xscale='log',ylim=[1e-11,1e-8],ylabel='Buoyancy flux per unit area /kg$s^{-1}m^{-2}$',xlabel='Time/Ma')\n",
     "\n",
     "if save == True:\n",
-    "    plt.savefig(f'{save_path}run_{run}_Bbuoy.pdf',dpi=500)"
+    "    plt.savefig(f'{save_path}run_{run}_Bbuoy.png',dpi=500)"
    ]
   },
   {
