Add variable core radius

--- a/Plotting_scripts/Icarus_paper_plots.ipynb
+++ b/Plotting_scripts/Icarus_paper_plots.ipynb
@@ -67,9 +67,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "run=5\n",
+    "run=2\n",
     "save = True# do you want to save your figures?\n",
-    "automated = False\n",
+    "automated = True\n",
     "log_time = True #do you want to plot time logarithmically\n",
     "path = '../Results_combined/Psyche/' #path to files \n",
     "save_path = '../Plots/Psyche/'"
@@ -275,7 +275,9 @@
    "outputs": [],
    "source": [
     "n_cells = int(r/dr)\n",
-    "nmantle = round((n_cells-3)*(r-rc)/r)+2\n",
+    "nccells = round((n_cells-3)*(rcr))+2 #number of cells needed to span core (inc. centre and CMB)\n",
+    "nmantle = n_cells - nccells +1 #number of cells needed to span mantle plus one extra for CMB\n",
+    "rc = (nccells-1)*dr #radius of core [m], subtract one for centre\n",
     "terode = results.at[0,'terode']\n",
     "tstrat_remove = results.at[0,'tstrat_remove']\n",
     "diff_time = results.at[0,'diff_time']\n",
@@ -375,7 +377,7 @@
     "r_unstable=np.array([]) \n",
     "for ind in min_unstable:\n",
     "    r_unstable = np.append(r_unstable,rplot[int(ind)])\n",
-    "rc = rcr*r\n",
+    "\n",
     "\n",
     "#log time\n",
     "if log_time == True:\n",
@@ -416,7 +418,7 @@
    "outputs": [],
    "source": [
     "plt.figure(figsize=[10,20/3])\n",
-    "plt.pcolormesh(tpa[::2],rplot[::2],Tall[::2,::2],shading = 'gouraud',vmin=200,vmax=1600) #1033 for kamacite\n",
+    "plt.pcolormesh(tpa[::2],rplot[::2],Tall[::2,::2],shading = 'gouraud',vmin=1053,vmax=1600) #1053 for kamacite (mansbach 2023)\n",
     "plt.hlines(rc/1e3,tpt[0],max(tpa),linestyle='--',color='black',label='CMB')\n",
     "plt.vlines(tpt[0],0,r/1e3,linestyle='-.',label='Differentiation')\n",
     "plt.fill_betweenx([0,rc/5e3],on1l,off1l,alpha=0,hatch='/',label='dynamo on')\n",
@@ -437,7 +439,7 @@
     "plt.colorbar(label='Temperature/K')\n",
     "plt.ylim(bottom=0)\n",
     "plt.legend(bbox_to_anchor=[1.6,0.5])\n",
-    "plt.xscale('log')\n",
+    "#plt.xscale('log')\n",
     "if save == True:\n",
     "    plt.savefig(f'{save_path}run_{run}_thermal_profile.png',bbox_inches='tight',dpi=500)"
    ]
@@ -703,7 +705,7 @@
     "ax[1].plot(t_plot_t[f<f0],comp[f<f0],color='darkorchid',alpha=0.1)\n",
     "ln4=ax[1].plot(t_plot_t[f<f0],compdf.rolling(window=wn,center=True).mean(),color='darkorchid')\n",
     "ax[1].legend(ln3+ln4,['thermal','compositional'])\n",
-    "ax[1].set(xscale='log',ylim=[1e-11,1e-8],ylabel='Buoyancy flux per unit area /kg$s^{-1}m^{-2}$',xlabel='Time/Ma')\n",
+    "ax[1].set(ylim=[1e-11,1e-8],ylabel='Buoyancy flux per unit area /kg$s^{-1}m^{-2}$',xlabel='Time/Ma',xscale='log')\n",
     "\n",
     "if save == True:\n",
     "    plt.savefig(f'{save_path}run_{run}_Bbuoy.png',dpi=500)"
