Create plot notebook for Sam

--- a/Plotting_scripts/Psyche_plots.ipynb
+++ b/Plotting_scripts/Psyche_plots.ipynb
@@ -55,9 +55,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "run=2\n",
+    "run=5\n",
     "rcr = 0.65 #core:mantle ratio\n",
-    "save = False# do you want to save your figures?\n",
+    "save = True# do you want to save your figures?\n",
     "automated = True # were your results generated using an automated run (default=True)\n",
     "log_time = True #do you want to plot time logarithmically\n",
     "path = '../Results_combined/Psyche/' #path to files \n",
@@ -157,7 +157,10 @@
    "id": "8c75b413",
    "metadata": {},
    "source": [
-    "Concatenate shared variables"
+    "Concatenate shared variables.\n",
+    "\n",
+    "`Tall[0,:]` - central temperature at all times\n",
+    "`Tall[-1,:]` - surface temperature at all times"
    ]
   },
   {
@@ -628,7 +631,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "wn = 75 #averaging window width\n",
+    "wn = 20 #averaging window width\n",
     "fig, ax = plt.subplots(nrows=1,ncols=1,sharex='col',figsize=[10,4])\n",
     "#B and Rem\n",
     "ax2 = ax.twinx()\n",
