Correct color for Rem line

--- a/Plotting_scripts/Supplementary_paper_plots.ipynb
+++ b/Plotting_scripts/Supplementary_paper_plots.ipynb
@@ -260,14 +260,14 @@
     "\n",
     "for i in range(5,nrun-3): #only plot values either isde of eta0 = 10^20\n",
     "    run = int(minrun+i)\n",
-    "    varval = var_data.loc[var_data['run']==run,'rcmf'].values[0]\n",
+    "    varval = var_data.loc[var_data['run']==run,var].values[0]\n",
     "    rmantle = var_data.loc[var_data['run']==run,'r'].values[0]/2\n",
     "    fcond_t=var_results.loc[var_results['run']==run,'fcond_t'].values[0]\n",
     "    #import data\n",
     "    npzfile = np.load(f'{path}run_{run}.npz')\n",
     "    t = npzfile['t']/Myr #time in Myr\n",
     "    Rem = npzfile['Rem']\n",
-    "    ax.plot(t,Rem,label=f'{varlab}={varval:.2g}',color=colors[i])\n",
+    "    ax.plot(t,Rem,label=f'{varlab}={varval:.2g}{unit}',color=colors[i])\n",
     " \n",
     "        \n",
     "ax.hlines(10,0,70,linestyle='dashed',color='gray')\n",
@@ -412,7 +412,7 @@
     "    Rem = npzfile['Rem']\n",
     "    plt.plot(t,Rem,color=colors[i],label=f'{varlab}={varval:.2g}')\n",
     "\n",
-    "plt.hlines(10,0,120,linestyle='dashed')\n",
+    "plt.hlines(10,0,120,linestyle='dashed',color='gray')\n",
     "plt.xlabel('Time after CAI formation/ Ma')\n",
     "plt.ylabel('Magnetic Reynolds number')\n",
     "plt.legend()\n",
